# gpie

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/: bayesian-optimization.ipynb  gpr-sampling-inference.ipynb  mauna-loa-co2.ipynb
gpie/: __init__.py  base.py  util.py
gpie/infer/: __init__.py  densities.py  density.py  mcmc.py  optim.py  optimizer.py  vi.py
gpie/kernel/: __init__.py  bayes_optimizer.py  bo.py  gaussian_process.py  gp.py  kernels.py  means.py
gpie/linalg/: __init__.py  linalg.py
gpie/metric/: __init__.py  distances.py  metrics.py
gpie/util/: __init__.py  config.py  context.py  data.py  feature.py  linalg.py
tests/: test_base.py  test_infer.py  test_kernel.py  test_util.py
