[metadata]
name = gpie
version = attr: gpie.__version__
url = https://github.com/zack-x-zhang/gpie
license_file = LICENSE
author = Zack Zhang
author_email = zack.zhang.coder@gmail.com
description = GPie: Gaussian Process tiny explorer
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
install_requires =
  numpy>=1.18
  scipy>=1.4
packages = find:

[options.packages.find]
where = .
exclude = tests