[metadata]
name = gpie
version = attr: gpie.__version__
url = https://github.com/zackxzhang/gpie
license_files = LICENSE
author = Zack Zhang
author_email = zack.zhang.coder@gmail.com
description = GPie: Gaussian Process tiny explorer
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10
install_requires =
  numpy>=1.23
  scipy>=1.9
packages = find:

[options.packages.find]
where = .
exclude = tests